--- a/web-english-ai-nginx.conf
+++ b/web-english-ai-nginx.conf
@@ -22,5 +22,18 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 
+    listen 443 ssl; # managed by Certbot
+    ssl_certificate /etc/letsencrypt/live/english-ai-assistant.m-gh.com/fullchain.pem; # managed by Certbot
+    ssl_certificate_key /etc/letsencrypt/live/english-ai-assistant.m-gh.com/privkey.pem; # managed by Certbot
+    include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
+    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem; # managed by Certbot
+}
+server {
+    if ($host = english-ai-assistant.m-gh.com) {
+        return 301 https://$host$request_uri;
+    } # managed by Certbot
+
+    server_name english-ai-assistant.m-gh.com;
     listen 80;
+    return 404; # managed by Certbot
 }
